test/tests/exec/operators/strict.txt
error: assertion failure
 --> exec/operators/strict.tql:4:17
  |
4 | strict { assert false }
  |                 ^^^^^ 
  |
